# Hook-Mark_GUI

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.cmd  build_cl.cmd  build_g++.cmd  makedoc.cmd  run.cmd  run_cl.cmd  run_g++.cmd
src/: CMakeLists.txt  hookmark_gui.rc  hookmark_gui_main.cpp  hookmark_gui_window.cpp  hookmark_gui_window.hpp
src/config/: default.cfg  init.cfg
src/include/: hookmark.hpp  hookmark_base.hpp  hookmark_gui.hpp  hookmark_gui_d2d1_grid.hpp  hookmark_gui_helpers.hpp  hookmark_gui_id.hpp  hookmark_gui_version.hpp  hookmark_gui_window.hpp  hookmark_gui_window_base.hpp  hookmark_helpers.hpp  hookmark_kifu.hpp  hookmark_kifu_base.hpp  hookmark_resource.hpp  signed_vector.hpp
test/: test1.hmk  test2.hmkif  test3.txt  test4.hmk
